# rusty-visuals

./: .gitignore  Cargo.toml  README.md
hello-world/: Cargo.toml
hello-world/src/: collections.rs  control_flow.rs  game.rs  main.rs  ownership.rs  strings.rs  structs.rs  types.rs
rusty-visuals/: Cargo.toml  README.md
rusty-visuals/src/: colorer.rs  colors.rs  file_utils.rs  force_field.rs  grid.rs  grid_v2.rs  hi_res_capture.rs  lib.rs  main.rs  mover.rs  two-dimensional-perlin.rs
rusty-visuals/src/art/: beach_image_palette.rs  circles.rs  cracked_rectangles.rs  intertwined.rs  lined_beach.rs  mouse_shapes.rs
rusty-visuals/src/basics/: randomwalk.rs  waves.rs
rusty-visuals/src/basics/color/: P_1_0_01.rs  P_1_1_1.rs  P_1_1_2.rs  color_interpolation.rs  color_palettes_from_rules.rs
rusty-visuals/src/basics/shapes/: grid_alignment.rs  grid_complex_shapes.rs  mouse_polygons.rs  shapes_from_agents.rs
rusty-visuals/src/color/: mod.rs
rusty-visuals/src/color/colorer/: alternating_colorer.rs  grid_colorer.rs  interpolated_colorer.rs  mod.rs  modulo_colorer.rs  palette_colorer.rs  rotating_colorer.rs
rusty-visuals/src/ecosystem/: :w  force_field.rs  main.rs  mover.rs
rusty-visuals/src/nature_of_code/forces/: bouncing_ball.rs  gravity.rs  helium_balloon.rs
rusty-visuals/src/nature_of_code/vectors/: accelerate_towards_mouse.rs  main.rs  up_down_car.rs
rusty-visuals/src/vectors/: accelerate_towards_mouse.rs  up_down_car.rs
src/: main.rs
