[package]
name = "rusty-visuals"
version = "0.1.0"
authors = ["Arjun Puri <arjunpur2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.0"
nannou = "0.14"
rand = "0.7.3"
itertools = "0.9.0"

# Art entry points
[[bin]]
name="art_circles"
path="src/art/circles.rs"

# Basic tests and examples
[[bin]]
name="waves"
path="src/basics/waves.rs"

[[bin]]
name="random_walk"
path="src/basics/randomwalk.rs"

[[bin]]
name="ecosystem"
path="src/ecosystem/main.rs"

# Nature of code entry points
[[bin]]
name="vectors"
path="src/nature_of_code/vectors/main.rs"

[[bin]]
name="up_down_car"
path="src/nature_of_code/vectors/up_down_car.rs"

[[bin]]
name="accelerate_towards_mouse"
path="src/nature_of_code/vectors/accelerate_towards_mouse.rs"

[[bin]]
name="helium_balloon"
path="src/nature_of_code/forces/helium_balloon.rs"

[[bin]]
name="bouncing_ball"
path="src/nature_of_code/forces/bouncing_ball.rs"

[[bin]]
name="gravity"
path="src/nature_of_code/forces/gravity.rs"
